--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>鱼泡泡高级点餐系统</title><link rel=stylesheet href=http://at.alicdn.com/t/font_6affseakeygphkt9.css><style>html,body,#app {
+<!DOCTYPE html><html><head><meta charset=utf-8><title>鱼泡泡高级点餐系统</title><style>html,body,#app {
         height:100% ;
         margin: 0;
         padding: 0;
@@ -20,4 +20,4 @@
       }
       a {
         text-decoration: none;
-      }</style><link href=./static/css/app.ffa796c4d8226ef00ff6a5d445acc2f6.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.f93d5019aa9138ebfe57.js></script><script type=text/javascript src=./static/js/vendor.d3f3ff1140d754bccc3f.js></script><script type=text/javascript src=./static/js/app.feb6b9579810aa889f21.js></script></body></html>
+      }</style><link href=./static/css/app.e9a4b9d31464268e9d95fe6644c8b4a8.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.bbdaf818e7c512c66a36.js></script><script type=text/javascript src=./static/js/vendor.0dac60f7a2ad96550e74.js></script><script type=text/javascript src=./static/js/app.43183cfabfdc5493f2f4.js></script></body></html>
